Change Log
==========

v2.0.1
------
- Added version number.

v2.0.0
------
- Improved interrupts (different API, check the docs).
- Reduced scope of global variables from package to individual modules.
  (Hiding namespaces from the end user is an attempt to simplify the interface
  for children. However this package is not intended for that audience
  and so messing with the namespaces only confuses things.)

v1.2.1
------
- Supports Python 2.
- Started using semantic versioning http://semver.org/.

v1.2
----
- Started using a change log!
- Removed errors submodule, custom exceptions now go in their respective
  modules. This might change back in a future release.
- Fixed DigitalInput value bugs
- Fixed SPI transfer bug.. Function spisend now takes bytes as an argument
  instead of a list. This makes more sense, since it returns bytes.
- Removed install.sh, everything is now handled by setup.py.
- Updated docs.