@@ -3,7 +3,8 @@ Change Log
 
 v2.0.1
 ------
-- Added version number.
+- Added version number in source.
+- Added uninstall script.
 
 v2.0.0
 ------
